# swift-docc

./: .gitignore  .license_header_template  .licenseignore  .spi.yml  .unacceptablelanguageignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  NOTICE.txt  Package.resolved  Package.swift  README.md  build-script-helper.py  features.json
Sources/: CMakeLists.txt
Sources/CommandLine/: CMakeLists.txt
Sources/CommandLine/Utility/: Throttle.swift
Sources/Common/: SourceLanguage.swift
Sources/DocCCommandLine/: CMakeLists.txt  Docc.swift
Sources/DocCCommandLine/Action/: Action.swift  ActionResult.swift
Sources/DocCCommandLine/CommandLine.docc/: CommandLine.md  header.html
Sources/DocCCommandLine/PreviewServer/: LiveReloadClients.swift  PreviewHTTPHandler.swift  PreviewServer.swift
Sources/DocCCommandLine/Transformers/: StaticHostableTransformer.swift
Sources/DocCCommandLine/Utility/: DirectoryMonitor.swift  PlatformArgumentParser.swift  Signal.swift
Sources/DocCCommon/: CMakeLists.txt  FixedSizeBitSet.swift  Mutex.swift  SourceLanguage.swift
Sources/DocCCommon/JSONDecoding/: FastSymbolGraphJSONDecoder.swift  SymbolGraph+FastJSONDecodable.swift  UnsafeRawPointer+HasASCIIPrefix.swift
Sources/DocCDocumentation/: EmptyFile.swift
Sources/DocCDocumentation/DocCDocumentation.docc/: DocC Documentation.md  DocC.symbols.json  Info.plist  adding-supplemental-content-to-a-documentation-catalog.md  customizing-the-appearance-of-your-documentation-pages.md  customizing-your-documentation-appearance.md  distributing-documentation-to-other-developers.md  documenting-a-swift-framework-or-package.md  formatting-your-documentation-content.md  writing-symbol-documentation-in-your-source-files.md
Sources/DocCHTML/: CMakeLists.txt  HTMLBuilder.swift  HTMLFormatter.swift  HTMLNode+Attributes.swift  HTMLNode+Tags.swift  HTMLNode+fromXMLNode.swift  HTMLNode.swift  LinkProvider.swift  MarkdownRenderer+Availability.swift  MarkdownRenderer+Breadcrumbs.swift  MarkdownRenderer+Declaration.swift  MarkdownRenderer+Discussion.swift  MarkdownRenderer+Parameters.swift  MarkdownRenderer+Relationships.swift  MarkdownRenderer+Returns.swift  MarkdownRenderer+Topics.swift  MarkdownRenderer.swift  MarkupRenderer+Availability.swift  MarkupRenderer+Breadcrumbs.swift  MarkupRenderer+Declaration.swift  MarkupRenderer+Parameters.swift  MarkupRenderer+Returns.swift  MarkupRenderer+Topics.swift  StaticResources.swift  WordBreak.swift  XMLNode+element.swift
Sources/DocCHTMLVue/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Sources/DocCHTMLVue/src/: App.vue  main.ts  style.css
Sources/DocCTestUtilities/: FilesAndFolders.swift  SymbolGraphCreation.swift  TestFileSystem.swift  XCTestCase+TemporaryDirectory.swift
Sources/GenerateVueResourcesTool/: main.swift
Sources/HTML/: LinkProvider.swift  MarkupRenderer+Breadcrumbs.swift  MarkupRenderer+PageElements.swift  MarkupRenderer+Parameters.swift  MarkupRenderer+WordBreak.swift  MarkupRenderer.swift  WordBreak.swift  XMLNode+element.swift
Sources/SwiftDocC/: CMakeLists.txt
Sources/SwiftDocC/Benchmark/: Benchmark.swift  BenchmarkResults.swift  Metrics.swift
Sources/SwiftDocC/Catalog Processing/: GeneratedCurationWriter.swift
Sources/SwiftDocC/Checker/: Checker.swift
Sources/SwiftDocC/Converter/: DocumentationContextConverter.swift  DocumentationNodeConverter.swift  RenderNode+Coding.swift  TopicRenderReferenceEncoder.swift
Sources/SwiftDocC/Coverage/: DocumentationCoverageOptions.swift
Sources/SwiftDocC/DocumentationService/: DocumentationServer+createDefaultServer.swift  ExternalReferenceResolverServiceClient.swift
Sources/SwiftDocC/Indexing/: Indexable.swift  IndexingError.swift  IndexingRecord.swift  RenderBlockContent+TextIndexing.swift  RenderInlineContent+TextIndexing.swift  RenderNode+Indexable.swift  RenderNode+Relationships.swift  RenderSection+TextIndexing.swift  TutorialSectionsRenderSection+Indexable.swift
Sources/SwiftDocC/Infrastructure/: ContentCache.swift  ConvertActionConverter.swift  ConvertOutputConsumer.swift  CoverageDataEntry.swift  DocumentationBundle+Identifier.swift  DocumentationBundle.swift  DocumentationBundleFileTypes.swift  DocumentationCatalog.swift  DocumentationCatalogFileTypes.swift  DocumentationContext+Breadcrumbs.swift  DocumentationContext.swift  DocumentationConverter.swift  DocumentationCurator.swift  DocumentationInputFileTypes.swift  DocumentationInputs+Identifier.swift  DocumentationInputs.swift  NodeURLGenerator.swift  PathHierarchy.swift  SymbolPathTree.swift
Sources/SwiftDocC/LinkTargets/: LinkDestinationSummary.swift
Sources/SwiftDocC/Model/: AnchorSection.swift  AvailabilityParser.swift  BuildMetadata.swift  DocumentationMarkup.swift  DocumentationNode.swift  Identifier.swift  Kind.swift  Markup+capitalization.swift  Markup+parsing.swift  Name.swift  ParametersAndReturnValidator.swift  SourceLanguage.swift  TaskGroup.swift
Sources/SwiftDocC/Semantics/: Abstracted.swift  Comment.swift  ContentAndMedia.swift  DirectiveConvertable.swift  DirectiveParser.swift  Intro.swift  Landmark.swift  Layout.swift  MarkupContainer.swift  MarkupReferenceResolver.swift  Redirect.swift  Redirected.swift  ReferenceResolver.swift  Semantic.swift  SemanticAnalysis.swift  SemanticAnalyzer.swift  TechnologyBound.swift  Timed.swift  Titled.swift
Sources/SwiftDocC/Servers/: DocumentationSchemeHandler.swift  FileServer.swift
Sources/SwiftDocC/SourceRepository/: SourceRepository.swift
Sources/SwiftDocC/SwiftDocC.docc/: SwiftDocC.md  footer.html  header.html
Sources/SwiftDocC/SwiftDocCMarkdownOutput/: MarkdownOutputManifest.swift  (+1 more)
Sources/SwiftDocCTestUtilities/: FilesAndFolders.swift  Sequence+XCTAssert.swift  SymbolGraphCreation.swift  TestFileSystem.swift  XCTestCase+TemporaryDirectory.swift
Sources/SwiftDocCUtilities/: CMakeLists.txt  Docc.swift
Sources/_Common/: FileManagerProtocol.swift
Sources/docc/: CMakeLists.txt  main.swift
Sources/generate-symbol-graph/: CommandUsageParser.swift  main.swift
Sources/update-license-for-modified-files/: main.swift
(+16855 files in other folders)
